Allow nibbles